fix horizontal scrollbar

--- a/src/components/common/TwoPaneLayout.less
+++ b/src/components/common/TwoPaneLayout.less
@@ -5,6 +5,7 @@
     padding-top: 30px;
     height: calc(~"100vh - " @headerHeight);
     overflow-x: scroll;
+    overflow-y: hidden;
     background-color: @textBlue;
     .svg-inline--fa{
       margin-right: 15px;
